--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   ],
   "author": "vudovn",
   "license": "MIT",
+  "scripts": {
+    "dev": "cd web && npm run dev",
+    "build": "cd web && npm install && npm run build",
+    "start": "cd web && npm run start"
+  },
   "dependencies": {
     "cloudinary": "^2.9.0"
   }
