--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "cd web && npm run dev",
-    "build": "cd web && npm install && npm run build",
+    "build": "cd web && npm run build",
     "start": "cd web && npm run start"
   },
   "dependencies": {
