--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   "author": "vudovn",
   "license": "MIT",
   "scripts": {
-    "dev": "cd web && npm run dev",
-    "build": "cd web && npm run build",
-    "start": "cd web && npm run start"
+    "dev": "npm --prefix web run dev",
+    "build": "npm --prefix web install && npm --prefix web run build",
+    "start": "npm --prefix web run start"
   },
   "dependencies": {
     "cloudinary": "^2.9.0"
