--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
+
 [build]
   base = "web"
   command = "npm run build"
   publish = ".next"
-
-[build.environment]
-  NODE_VERSION = "20"
